--- a/src/GuiApp/FileTime.Avalonia/App.axaml
+++ b/src/GuiApp/FileTime.Avalonia/App.axaml
@@ -142,6 +142,9 @@
 		<Style Selector="TextBlock.SmallText">
 			<Setter Property="FontSize" Value="12"/>
 		</Style>
+		<Style Selector="TextBlock.ExtraSmallText">
+			<Setter Property="FontSize" Value="11"/>
+		</Style>
 		<Style Selector="ListBox.ContentListView">
 			<Setter Property="Background" Value="Transparent"/>
 		</Style>
