Optimization, UI improvements, Run command

--- a/src/GuiApp/FileTime.Avalonia/App.axaml
+++ b/src/GuiApp/FileTime.Avalonia/App.axaml
@@ -12,6 +12,7 @@
 			<Color x:Key="AppBackgroundColor">#E7073642</Color>
 			<Color x:Key="ContainerBackgroundColor">#083e4c</Color>
 			<Color x:Key="TransparentContainerBackgroundColor">#D0083e4c</Color>
+			<Color x:Key="BarelyTransparentBackgroundColor">#80083e4c</Color>
 
 			<Color x:Key="ItemBackgroundColor">#00000000</Color>
 			<Color x:Key="AlternativeItemBackgroundColor">#10000000</Color>
@@ -128,6 +129,7 @@
 			<converters:IsEmptyConverter x:Key="IsNotEmptyConverter" Inverse="true"/>
 			<converters:ExceptionToStringConverter x:Key="ExceptionToStringConverter"/>
 			<converters:BoolInverter x:Key="BoolInverter"/>
+			<converters:IsElementConverter x:Key="IsElementConverter"/>
 
 		</ResourceDictionary>
 	</Application.Resources>
@@ -144,6 +146,10 @@
 		</Style>
 		<Style Selector="TextBlock.ExtraSmallText">
 			<Setter Property="FontSize" Value="11"/>
+		</Style>
+		<Style Selector="TextBox">
+			<Setter Property="Foreground" Value="{DynamicResource ForegroundBrush}"/>
+			<Setter Property="Background" Value="{DynamicResource ContainerBackgroundBrush}"/>
 		</Style>
 		<Style Selector="ListBox.ContentListView">
 			<Setter Property="Background" Value="Transparent"/>
