--- a/src/GuiApp/FileTime.Avalonia/Views/MainWindow.axaml
+++ b/src/GuiApp/FileTime.Avalonia/Views/MainWindow.axaml
@@ -53,60 +53,61 @@
 								Items="{Binding RootDriveInfos}">
 								<ItemsRepeater.ItemTemplate>
 									<DataTemplate>
-										<Grid Margin="0,5" ColumnDefinitions="Auto,*,Auto" RowDefinitions="Auto,Auto">
-											<Image
-												Grid.RowSpan="2"
-												Width="20"
-												Height="20"
-												HorizontalAlignment="Left"
-												VerticalAlignment="Center"
-												Source="{SvgImage /Assets/material/folder.svg}" />
-
-											<StackPanel
-												Grid.Column="1"
-												VerticalAlignment="Center"
-												HorizontalAlignment="Stretch"
-												Orientation="Horizontal">
-
-												<TextBlock
-													Margin="5,0,0,0"
+										<Grid Classes="RootDriveInfo" PointerPressed="OnRootDrivePointerPressed" Cursor="Hand">
+											<Grid Margin="0,5" ColumnDefinitions="Auto,*,Auto" RowDefinitions="Auto,Auto">
+												<Image
+													Grid.RowSpan="2"
+													Width="20"
+													Height="20"
+													HorizontalAlignment="Left"
 													VerticalAlignment="Center"
-													Text="{Binding FullName}" />
+													Source="{SvgImage /Assets/material/folder.svg}" />
 
-												<TextBlock
-													Margin="5,0,0,0"
+												<StackPanel
+													Grid.Column="1"
 													VerticalAlignment="Center"
-													Classes="ExtraSmallText"
-													Text="{Binding Label}" IsVisible="{Binding Label,Converter={StaticResource IsNotEmptyConverter}}" />
-											</StackPanel>
+													HorizontalAlignment="Stretch"
+													Orientation="Horizontal">
 
-											<StackPanel
-												HorizontalAlignment="Right"
-												Grid.Column="2"
-												Orientation="Horizontal"
-												VerticalAlignment="Center">
+													<TextBlock
+														Margin="5,0,0,0"
+														VerticalAlignment="Center"
+														Text="{Binding FullName}" />
 
-												<TextBlock Classes="SmallText" VerticalAlignment="Center" Text="{Binding Free, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}">
-												</TextBlock>
+													<TextBlock
+														Margin="5,0,0,0"
+														VerticalAlignment="Center"
+														Classes="ExtraSmallText"
+														Text="{Binding Label}" IsVisible="{Binding Label,Converter={StaticResource IsNotEmptyConverter}}" />
+												</StackPanel>
 
-												<TextBlock Classes="SmallText" VerticalAlignment="Center" Text=" / ">
-												</TextBlock>
+												<StackPanel
+													HorizontalAlignment="Right"
+													Grid.Column="2"
+													Orientation="Horizontal"
+													VerticalAlignment="Center">
 
-												<TextBlock Classes="SmallText" VerticalAlignment="Center" Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}">
-												</TextBlock>
-											</StackPanel>
+													<TextBlock Classes="SmallText" VerticalAlignment="Center" Text="{Binding Free, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}">
+													</TextBlock>
 
-											<ProgressBar
-												Margin="5,0,0,0"
-												Grid.Column="1"
-												Grid.ColumnSpan="2"
-												Grid.Row="1"
-												MinWidth="100"
-												HorizontalAlignment="Stretch"
-												Maximum="100"
-												Value="{Binding UsedPercentage}" />
+													<TextBlock Classes="SmallText" VerticalAlignment="Center" Text=" / ">
+													</TextBlock>
+
+													<TextBlock Classes="SmallText" VerticalAlignment="Center" Text="{Binding Size, Converter={StaticResource FormatSizeConverter}, ConverterParameter=0}">
+													</TextBlock>
+												</StackPanel>
+
+												<ProgressBar
+													Margin="5,0,0,0"
+													Grid.Column="1"
+													Grid.ColumnSpan="2"
+													Grid.Row="1"
+													MinWidth="100"
+													HorizontalAlignment="Stretch"
+													Maximum="100"
+													Value="{Binding UsedPercentage}" />
+											</Grid>
 										</Grid>
-
 									</DataTemplate>
 								</ItemsRepeater.ItemTemplate>
 							</ItemsRepeater>
@@ -160,10 +161,12 @@
 										<ItemsControl Items="{Binding ParallelCommands}">
 											<ItemsControl.ItemTemplate>
 												<DataTemplate>
-													<StackPanel>
-														<TextBlock Text="{Binding Name}"/>
-														<ProgressBar Margin="0,5,0,0" Maximum="100" Value="{Binding Progress}"/>
-													</StackPanel>
+													<Border BorderThickness="1" Classes="TimelineCommand" Classes.SelectedTimelineCommand="{Binding IsSelected}">
+														<StackPanel>
+															<TextBlock Text="{Binding Name}"/>
+															<ProgressBar Margin="0,5,0,0" Maximum="100" Value="{Binding Progress}"/>
+														</StackPanel>
+													</Border>
 												</DataTemplate>
 											</ItemsControl.ItemTemplate>
 										</ItemsControl>
